<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Math</string>

    <!-- Menu -->
    <string name="menu_title">Math exercise</string>
    <string name="menu_start">Launch</string>
    <string name="menu_challenge">Challenge</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <!-- Exercise -->
    <string name="problem_counter">Problem:</string>
    <string name="wrong_counter">Wrong:</string>

    <string name="dialog_final_title">Exercise over</string>
    <string name="dialog_final_text1">Problem count:</string>
    <string name="dialog_final_text2">Wrong guesses:</string>

    <string name="dialog_return_title">Return to the menu</string>
    <string name="dialog_return_text">Do you really wish to return to the menu?</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>

    <!-- Challenge -->
    <string name="input_result">Result</string>
    <string name="input_send">Send</string>
    <string name="score_counter">Score:</string>

    <string name="score_result">Final score:</string>
    <string name="score_1">You could do better…</string>
    <string name="score_2">Nice try.</string>
    <string name="score_3">Good job!</string>
    <string name="score_4">VERY nice!!</string>
    <string name="score_5">You are a math genius!!!</string>

    <!-- Settings -->
    <string name="settings_theme">Theme</string>
    <string-array name="settings_theme_select">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="settings_language">Language</string>
    <string-array name="settings_language_select">
        <item>System</item>
        <item>English (EN)</item>
        <item>Czech (CZ)</item>
    </string-array>

    <string name="settings_position">Unknown value position</string>
    <string name="settings_operations">Allowed operation</string>
    <string name="settings_range_1">Range of +, -</string>
    <string name="settings_range_2">Range of *, /</string>
    <string name="settings_range_min">min</string>
    <string name="settings_range_max">max</string>
    <string name="settings_count">Problem count</string>
    <string name="settings_debug">Debug output</string>

    <string name="settings_save">Save preferences</string>
    <string name="settings_default">Default values</string>

    <string name="input_error_title">Invalid values</string>
    <string name="input_error_position">You must enable at least one unknown value position</string>
    <string name="input_error_operation">You must enable at least one operation</string>
    <string name="input_error_problems">Problem count cannot be less than 1</string>
    <string name="input_error_minmax">Minimum cannot be greater than maximum</string>
    <string name="input_error_minmax2">Range between minimum and maximum must be at least 3</string>

    <!-- About -->
    <string name="about_name">Štěpán Faragula, 2024</string>
    <string name="about_project">Seminar work KIV/MBKZ</string>
</resources>